test/valid/poly-row-type-func.js
function f(o) { return o.length; }

f({ length: 2 });
f({ length: false });
