test/invalid/infer-from-call.js
function f(o) { o.momo(2); }
f({momo: 'baboon'}); // should fail, momo is not a function
